<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="EXTENDED">EXTENDED</string>
    <string name="actionbar_manage_connection">Manage Pebble</string>
    <string name="actionbar_search">Search</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_support">Support</string>
    <string name="alerts">Alerts</string>
    <string name="developer_conn_title">Developer Connection</string>
    <string name="distance">Distance</string>
    <string name="distance_summary">Use imperial units (miles) for distance measurements.</string>
    <string name="incoming_call_responses">Incoming call responses</string>
    <string name="notification_demo_email">EMAIL</string>
    <string name="notification_demo_phone_call">PHONE CALL</string>
    <string name="notification_demo_send_sample_notifications">Try sending sample notifications to your Pebble</string>
    <string name="notification_demo_text_message">TEXT MESSAGE</string>
    <string name="onboarding_app_pairing_problems_title">PAIRING PROBLEMS?</string>
    <string name="onboarding_banner_test_notifications">TEST NOTIFICATIONS</string>
    <string name="onboarding_cant_find_my_bluetooth_code">"I CAN'T FIND MY BLUETOOTH CODE"</string>
    <string name="onboarding_contact_support">CONTACT SUPPORT</string>
    <string name="onboarding_enable_activity_insights_text">I want to be more active</string>
    <string name="onboarding_enable_fit_sync_text">Sync with Google Fit</string>
    <string name="onboarding_enable_insights_explanation">Insights give you suggestions on how to live a healthier life and syncs with your timeline to determine when you have time in your day.</string>
    <string name="onboarding_enable_insights_title">HEALTH INSIGHTS</string>
    <string name="onboarding_enable_sleep_insights_text">I want to sleep more</string>
    <string name="onboarding_having_trouble_pairing">Having trouble pairing your Pebble?</string>
    <string name="onboarding_health_profile_age">Age</string>
    <string name="onboarding_health_profile_age_default">Select age</string>
    <string name="onboarding_health_profile_explanation">Please tell us a bit about yourself.</string>
    <string name="onboarding_health_profile_height">Height</string>
    <string name="onboarding_health_profile_height_default">Enter height</string>
    <string name="onboarding_health_profile_sex">Sex</string>
    <string name="onboarding_health_profile_sex_default">Select sex</string>
    <string name="onboarding_health_profile_title">HEALTH PROFILE</string>
    <string name="onboarding_health_profile_weight">Weight</string>
    <string name="onboarding_health_profile_weight_default">Enter weight</string>
    <string name="onboarding_insights_continue_button">CONTINUE</string>
    <string name="onboarding_pairing_doesnt_seem_to_be_working">"PAIRING DOESN'T SEEM TO BE WORKING"</string>
    <string name="onboarding_pairing_problems_explanation">"Your Bluetooth name is displayed on the screen. Existing users can find it from the watch's center button menu under \"Settings - Bluetooth\"."</string>
    <string name="onboarding_pairing_problems_instructions">Press the \"RETRY PAIRING\" button below and then press the \"Up Button\" on your Pebble when prompted.</string>
    <string name="onboarding_retry_pairing_button_text">RETRY PAIRING</string>
    <string name="onbording_continue">CONTINUE</string>
    <string name="pref_key_notifications">pref_key_notifications</string>
    <string name="pref_summary_analytics_opt_in">Send diagnostic data to Pebble</string>
    <string name="pref_summary_auto_app_update_wifi_only">"To reduce carrier data charges, don't update apps over mobile networks"</string>
    <string name="pref_summary_canned_responses">Customize the canned messages available on your Pebble</string>
    <string name="pref_summary_disable_built_in_sms">Check this box to stop using built-in SMS notifications. Use this only if having issues with missing SMS notifications</string>
    <string name="pref_summary_enable_developer_mode">Show Developer Connection in the main menu</string>
    <string name="pref_summary_hide_persistent_notification">Removes the persistent Pebble notification when idle</string>
    <string name="pref_summary_incoming_call_canned_responses">Customize the canned messages available on your Pebble</string>
    <string name="pref_summary_install_wear">Installing the Android Wear app on your device will enable richer notification actions on your Pebble. You do not need to open the Android Wear app at all - just having it installed will improve notifications to your Pebble</string>
    <string name="pref_summary_screen_on">"Send notifications when phone's screen is on"</string>
    <string name="pref_summary_sneakpeek_reminders">Enables a sneak peek of the Reminders App! Currently this feature is only compatible with English.</string>
    <string name="pref_title_about">ABOUT</string>
    <string name="pref_title_always_send">Always Send Notifications</string>
    <string name="pref_title_analytics_opt_in">Collect usage logs</string>
    <string name="pref_title_auto_app_update_wifi_only">Auto-Update via Wi-Fi Only</string>
    <string name="pref_title_auto_app_updates">AUTO APP UPDATES</string>
    <string name="pref_title_bluetooth">Bluetooth</string>
    <string name="pref_title_canned_responses">Notification responses</string>
    <string name="pref_title_developer">DEVELOPER</string>
    <string name="pref_title_disable_built_in_sms">Disable built-in SMS notifications</string>
    <string name="pref_title_enable_developer_mode">Enable Developer Mode</string>
    <string name="pref_title_font_settings">Additional font pack</string>
    <string name="pref_title_general">GENERAL</string>
    <string name="pref_title_health_analytics_opt_in">Collect health data</string>
    <string name="pref_title_hide_persistent_notification">Hide persistent notification</string>
    <string name="pref_title_install_wear">Install Wear app</string>
    <string name="pref_title_language_settings">Language Settings</string>
    <string name="pref_title_notifications">NOTIFICATIONS</string>
    <string name="pref_title_open_source">Open Source</string>
    <string name="pref_title_privacy">Privacy Settings</string>
    <string name="pref_title_sneakpeek_reminders">Reminders App</string>
    <string name="pref_title_sneakpeeks">SNEAK PEEK</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_voice">Voice Settings</string>
    <string name="actionbar_screenshot">MyPebble Screenshot</string>
    <string name="pebble_android_package_name">com.getpebble.android.basalt</string>
    <string name="pref_category_key_about">pref_key_about</string>
    <string name="pref_key_always_notify">pref_key_always_notify</string>
    <string name="pref_key_analytics_optin">pref_key_analytics_optin</string>
    <string name="pref_key_auto_app_updates_wifi_only">pref_key_auto_app_updates_wifi_only</string>
    <string name="pref_key_canned_responses_header">pref_key_canned_responses_header</string>
    <string name="pref_key_category_extended">pref_key_category_extended</string>
    <string name="pref_key_category_general">pref_key_category_general</string>
    <string name="pref_key_developer_mode_enable">pref_key_developer_mode_enable</string>
    <string name="pref_key_disable_built_in_sms">disable_built_in_sms</string>
    <string name="pref_key_distance_units">distance_units</string>
    <string name="pref_key_font_pack">pref_key_font_pack</string>
    <string name="pref_key_health_analytics_optin">pref_key_health_analytics_optin</string>
    <string name="pref_key_hide_persistent_notification">hide_persistent_notification</string>
    <string name="pref_key_incoming_call_canned_responses_header">pref_key_incoming_call_canned_responses_header</string>
    <string name="pref_key_install_wear">pref_key_install_wear</string>
    <string name="pref_key_language_pack">pref_key_language_pack</string>
    <string name="pref_key_open_source">pref_key_open_source</string>
    <string name="pref_key_privacy">pref_key_privacy</string>
    <string name="pref_key_sneakpeek_reminders_enabled">pref_key_sneakpeek_reminders_enabled</string>
    <string name="pref_key_sneakpeeks_category">pref_key_sneakpeeks_category</string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="pref_key_voice_language">voice_language</string>
</resources>