<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/EXTENDED" android:key="@string/pref_key_category_extended">
        <CheckBoxPreference android:enabled="true" android:id="@id/preference_imperial_units" android:title="@string/distance" android:key="@string/pref_key_distance_units" android:summary="@string/distance_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_general" android:key="@string/pref_key_category_general">
        <Preference android:title="@string/pref_title_bluetooth">
            <intent android:action="android.settings.BLUETOOTH_SETTINGS" />
        </Preference>
        <Preference android:id="@id/preference_language_settings" android:title="@string/pref_title_language_settings" android:key="@string/pref_key_language_pack">
            <intent android:targetPackage="@string/pebble_android_package_name" android:targetClass="com.getpebble.android.main.sections.settings.activity.LanguageSelectionActivity" />
        </Preference>
        <Preference android:id="@id/preference_font_settings" android:title="@string/pref_title_font_settings" android:key="@string/pref_key_font_pack">
            <intent android:targetPackage="@string/pebble_android_package_name" android:targetClass="com.getpebble.android.main.sections.fontpack.activity.AdditionalFontPackActivity" />
        </Preference>
        <Preference android:id="@id/preference_voice_settings" android:title="@string/pref_title_voice" android:key="@string/pref_key_voice_language">
            <intent android:targetPackage="@string/pebble_android_package_name" android:targetClass="com.getpebble.android.main.sections.settings.activity.ChooseLanguageActivity" />
        </Preference>
        <CheckBoxPreference android:id="@id/preference_hide_notification" android:title="@string/pref_title_hide_persistent_notification" android:key="@string/pref_key_hide_persistent_notification" android:summary="@string/pref_summary_hide_persistent_notification" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_privacy" android:key="@string/pref_key_privacy">
        <CheckBoxPreference android:enabled="true" android:id="@id/preference_usage_logs" android:title="@string/pref_title_analytics_opt_in" android:key="@string/pref_key_analytics_optin" android:summary="@string/pref_summary_analytics_opt_in" android:defaultValue="true" />
        <CheckBoxPreference android:enabled="true" android:id="@id/preference_health_analytics" android:title="@string/pref_title_health_analytics_opt_in" android:key="@string/pref_key_health_analytics_optin" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_notifications" android:key="@string/pref_key_notifications">
        <CheckBoxPreference android:id="@id/preference_always_notify" android:title="@string/pref_title_always_send" android:key="@string/pref_key_always_notify" android:summary="@string/pref_summary_screen_on" android:defaultValue="true" />
        <Preference android:id="@id/preference_canned_reponses" android:title="@string/pref_title_canned_responses" android:key="@string/pref_key_canned_responses_header" android:summary="@string/pref_summary_canned_responses">
            <intent android:targetPackage="@string/pebble_android_package_name" android:targetClass="com.getpebble.android.main.sections.notifications.activity.CannedResponsesActivity" />
        </Preference>
        <Preference android:id="@id/preference_incoming_call_canned_responses" android:title="@string/incoming_call_responses" android:key="@string/pref_key_incoming_call_canned_responses_header" android:summary="@string/pref_summary_incoming_call_canned_responses">
            <intent android:targetPackage="@string/pebble_android_package_name" android:targetClass="com.getpebble.android.main.sections.notifications.activity.IncomingCallCannedResponsesActivity" />
        </Preference>
        <Preference android:id="@id/preference_install_wear" android:title="@string/pref_title_install_wear" android:key="@string/pref_key_install_wear" android:summary="@string/pref_summary_install_wear">
            <intent android:action="android.intent.action.VIEW" android:data="market://details?id=com.google.android.wearable.app" />
        </Preference>
        <CheckBoxPreference android:id="@id/preference_disable_built_in_sms" android:title="@string/pref_title_disable_built_in_sms" android:key="@string/pref_key_disable_built_in_sms" android:summary="@string/pref_summary_disable_built_in_sms" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_auto_app_updates">
        <CheckBoxPreference android:enabled="true" android:id="@id/preference_app_updates_wifi_only" android:title="@string/pref_title_auto_app_update_wifi_only" android:key="@string/pref_key_auto_app_updates_wifi_only" android:summary="@string/pref_summary_auto_app_update_wifi_only" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_sneakpeeks" android:key="@string/pref_key_sneakpeeks_category">
        <CheckBoxPreference android:id="@id/preference_sneakpeek_reminders" android:title="@string/pref_title_sneakpeek_reminders" android:key="@string/pref_key_sneakpeek_reminders_enabled" android:summary="@string/pref_summary_sneakpeek_reminders" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_developer">
        <CheckBoxPreference android:id="@id/preference_developer_mode_enable" android:title="@string/pref_title_enable_developer_mode" android:key="@string/pref_key_developer_mode_enable" android:summary="@string/pref_summary_enable_developer_mode" android:defaultValue="false" />
        <Preference android:title="@string/developer_conn_title">
            <intent android:targetPackage="@string/pebble_android_package_name" android:targetClass="com.getpebble.android.main.activity.DeveloperConnectionActivity" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_about" android:key="@string/pref_category_key_about">
        <Preference android:id="@id/preference_open_source" android:title="@string/pref_title_open_source" android:key="@string/pref_key_open_source">
            <intent android:targetPackage="@string/pebble_android_package_name" android:targetClass="com.getpebble.android.main.sections.settings.activity.OpenSourceLicensesActivity" />
        </Preference>
        <Preference android:id="@id/preference_version" android:title="@string/pref_title_version" android:key="@string/pref_key_version" />
    </PreferenceCategory>
</PreferenceScreen>