<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_camera_enhance_white_24dp" android:id="@id/my_pbl_screenshot" android:visible="false" android:orderInCategory="3" android:title="@string/actionbar_screenshot" android:showAsAction="always" />
    <item android:icon="@drawable/icon_search" android:id="@id/my_pbl_search" android:orderInCategory="2" android:title="@string/actionbar_search" android:showAsAction="always|collapseActionView" android:actionViewClass="android.widget.SearchView" />
    <item android:icon="@drawable/icon_notices" android:id="@id/my_pbl_alerts" android:orderInCategory="1" android:title="@string/alerts" android:showAsAction="ifRoom" />
    <item android:id="@id/my_pbl_cmf" android:title="@string/actionbar_manage_connection" android:showAsAction="never" />
    <item android:icon="@drawable/ic_action_settings" android:id="@id/my_pbl_settings" android:title="@string/actionbar_settings" android:showAsAction="never" />
    <item android:icon="@drawable/ic_action_support" android:id="@id/my_pbl_support" android:title="@string/actionbar_support" android:showAsAction="never" />
    <item android:id="@id/developer_connection" android:visible="false" android:title="@string/developer_conn_title" android:showAsAction="never" />
</menu>