<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/onboarding_background_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/health_profile_onboarding_banner" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.getpebble.android.widget.PebbleTextView android:text="@string/onboarding_health_profile_title" android:layout_alignParentTop="true" style="@style/OnboardBanner" />
    </RelativeLayout>
    <ImageView android:id="@id/health_profile_onboarding_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_activity_tracking_margin_large" android:src="@drawable/fu_fitspecs" android:layout_below="@id/health_profile_onboarding_banner" android:layout_centerHorizontal="true" />
    <com.getpebble.android.widget.PebbleTextView android:id="@id/health_profile_onboarding_text" android:layout_marginTop="@dimen/onboarding_activity_tracking_margin_large" android:text="@string/onboarding_health_profile_explanation" android:layout_below="@id/health_profile_onboarding_icon" android:layout_centerHorizontal="true" style="@style/OnboardGrayTextView" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_text_margin_left_right" android:layout_marginTop="@dimen/onboarding_health_profile_info_margin_top" android:layout_marginRight="@dimen/onboarding_text_margin_left_right" android:baselineAligned="false" android:layout_below="@id/health_profile_onboarding_text">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <com.getpebble.android.widget.PebbleTextView android:text="@string/onboarding_health_profile_sex" style="@style/OnboardGraySmallTextView" />
            <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/onboarding_style_medium_textSize" android:textColor="@android:color/white" android:id="@id/gender_button" android:paddingTop="@dimen/onboarding_health_profile_padding_medium" android:paddingBottom="@dimen/onboarding_health_profile_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_text_margin_left_right" android:text="@string/onboarding_health_profile_sex_default" />
            <View android:layout_marginBottom="@dimen/onboarding_activity_tracking_margin_large" style="@style/OnboardDivider" />
            <com.getpebble.android.widget.PebbleTextView android:text="@string/onboarding_health_profile_height" style="@style/OnboardGraySmallTextView" />
            <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/onboarding_style_medium_textSize" android:textColor="@android:color/white" android:id="@id/height_button" android:paddingTop="@dimen/onboarding_health_profile_padding_medium" android:paddingBottom="@dimen/onboarding_health_profile_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_text_margin_left_right" android:text="@string/onboarding_health_profile_height_default" />
            <View style="@style/OnboardDivider" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <com.getpebble.android.widget.PebbleTextView android:text="@string/onboarding_health_profile_age" style="@style/OnboardGraySmallTextView" />
            <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/onboarding_style_medium_textSize" android:textColor="@android:color/white" android:id="@id/age_button" android:paddingTop="@dimen/onboarding_health_profile_padding_medium" android:paddingBottom="@dimen/onboarding_health_profile_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_text_margin_left_right" android:text="@string/onboarding_health_profile_age_default" />
            <View android:layout_marginBottom="@dimen/onboarding_activity_tracking_margin_large" style="@style/OnboardDivider" />
            <com.getpebble.android.widget.PebbleTextView android:text="@string/onboarding_health_profile_weight" style="@style/OnboardGraySmallTextView" />
            <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/onboarding_style_medium_textSize" android:textColor="@android:color/white" android:id="@id/weight_button" android:paddingTop="@dimen/onboarding_health_profile_padding_medium" android:paddingBottom="@dimen/onboarding_health_profile_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_text_margin_left_right" android:text="@string/onboarding_health_profile_weight_default" />
            <View style="@style/OnboardDivider" />
        </LinearLayout>
    </LinearLayout>
    <Button android:id="@id/health_profile_continue_button" android:text="@string/onbording_continue" android:layout_alignParentBottom="true" style="@style/OnboardOrangeButton" />
</RelativeLayout>