<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/dark_gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/onboarding_banner" android:visibility="gone" android:text="@string/onboarding_banner_test_notifications" android:layout_alignParentTop="true" style="@style/OnboardBannerDark" />
    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <com.getpebble.android.widget.PebbleTextView android:textSize="@dimen/notification_demo_send_notif_text_size" android:layout_gravity="center_horizontal" android:id="@id/txt_send_notif" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/notification_demo_send_notif_margin_bottom" android:text="@string/notification_demo_send_sample_notifications" style="@style/OnboardStyle.Small" />
            <com.getpebble.android.widget.PebbleButton android:layout_gravity="center_horizontal" android:id="@id/btn_demo_sms" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notification_demo_text_message" style="@style/OnboardTransparentButton" />
            <com.getpebble.android.widget.PebbleButton android:layout_gravity="center_horizontal" android:id="@id/btn_demo_phone" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notification_demo_phone_call" style="@style/OnboardTransparentButton" />
            <com.getpebble.android.widget.PebbleButton android:layout_gravity="center_horizontal" android:id="@id/btn_demo_email" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notification_demo_email" style="@style/OnboardTransparentButton" />
        </LinearLayout>
        <Button android:id="@id/btn_continue" android:visibility="gone" android:layout_height="wrap_content" android:text="@string/onbording_continue" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/OnboardOrangeButton" />
    </RelativeLayout>
</RelativeLayout>