<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/onboarding_background_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/onboarding_banner" android:text="@string/onboarding_app_pairing_problems_title" android:layout_alignParentTop="true" style="@style/OnboardBanner" />
    <com.getpebble.android.widget.PebbleTextView android:id="@id/pairing_problems_explanation" android:layout_marginTop="@dimen/onboarding_pairing_problems_text_margin" android:layout_marginBottom="@dimen/onboarding_pairing_problems_explanation_margin_bottom" android:text="@string/onboarding_pairing_problems_explanation" android:layout_below="@id/onboarding_banner" style="@style/OnboardGrayTextView" />
    <com.getpebble.android.widget.PebbleTextView android:id="@id/pairing_problems_press_up_button" android:layout_marginTop="@dimen/onboarding_pairing_problems_explanation_margin_top" android:layout_marginBottom="@dimen/onboarding_pairing_problems_text_margin" android:text="@string/onboarding_pairing_problems_instructions" android:layout_below="@id/pairing_problems_explanation" style="@style/OnboardGrayTextView" />
    <com.getpebble.android.widget.PebbleButton android:id="@id/retry_pairing_button" android:layout_marginTop="@dimen/onboarding_retry_pairing_button_margin_below" android:layout_marginBottom="@dimen/onboarding_retry_pairing_button_margin_below" android:text="@string/onboarding_retry_pairing_button_text" android:layout_below="@id/pairing_problems_press_up_button" style="@style/OnboardOrangeButton" />
    <com.getpebble.android.widget.PebbleTextView android:id="@id/pairing_problems_having_trouble" android:layout_marginBottom="@dimen/onboarding_pairing_problems_text_margin" android:text="@string/onboarding_having_trouble_pairing" android:layout_below="@id/retry_pairing_button" android:layout_centerHorizontal="true" style="@style/OnboardGrayTextView" />
    <com.getpebble.android.widget.PebbleButton android:textSize="@dimen/onboarding_new_text_size" android:textColor="@color/white" android:id="@id/pairing_problems_cant_find_bluetooth_code" android:background="@drawable/btn_onboarding_gray_states_straight_corners" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/onboarding_cant_find_bluetooth_code_margin_bottom" android:text="@string/onboarding_cant_find_my_bluetooth_code" android:layout_below="@id/pairing_problems_having_trouble" />
    <com.getpebble.android.widget.PebbleButton android:textSize="@dimen/onboarding_new_text_size" android:textColor="@color/white" android:id="@id/pairing_doesnt_seem_to_be_working" android:background="@drawable/btn_onboarding_gray_states_straight_corners" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/onboarding_pairing_doesnt_seem_to_be_working" android:layout_below="@id/pairing_problems_cant_find_bluetooth_code" />
    <LinearLayout android:orientation="vertical" android:id="@id/contact_support_background" android:background="@color/onboarding_background_light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <com.getpebble.android.widget.PebbleButton android:textSize="@dimen/onboarding_new_text_size" android:textColor="@color/white" android:id="@id/pairing_problems_contact_support_button" android:background="@drawable/btn_onboarding_gray_states" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onboarding_button_margin_left_right" android:layout_marginTop="@dimen/onboarding_contact_support_button_margin_top_bottom" android:layout_marginRight="@dimen/onboarding_button_margin_left_right" android:layout_marginBottom="@dimen/onboarding_contact_support_button_margin_top_bottom" android:text="@string/onboarding_contact_support" />
    </LinearLayout>
</RelativeLayout>